# pdf-to-wiki

./: .gitignore  AGENTS.md  README.md  handoff.md  pyproject.toml
.pi/: taskplane.json
docs/: ARCHITECTURE.md  ROADMAP.md  USAGE.md
src/pdf_to_wiki/: cli.py  config.py  logging.py  models.py
src/pdf_to_wiki/cache/: artifact_store.py  db.py  manifests.py  migrate.py
src/pdf_to_wiki/emit/: __init__.py  entity_pages.py  markdown_writer.py  obsidian_paths.py  validate.py
src/pdf_to_wiki/extract/: __init__.py  docling_engine.py  marker_engine.py  pdf_images.py  pymupdf_engine.py
src/pdf_to_wiki/index/: __init__.py
src/pdf_to_wiki/ingest/: build_section_tree.py  diagnostics.py  extract_page_labels.py  extract_text.py  extract_toc.py  fingerprint.py  import_blobforge.py  inspect_pdf.py  register_pdf.py
src/pdf_to_wiki/repair/: clean_text.py  extract_glossary.py  normalize.py  rewrite_refs.py  structured_tables.py  table_extract.py
src/rulebook_wiki/: __init__.py  cli.py  config.py  logging.py  models.py
src/rulebook_wiki/cache/: __init__.py  artifact_store.py  db.py  manifests.py
src/rulebook_wiki/emit/: markdown_writer.py  obsidian_paths.py
src/rulebook_wiki/extract/: __init__.py  marker_engine.py  pdf_images.py  pymupdf_engine.py
src/rulebook_wiki/ingest/: __init__.py  build_section_tree.py  (+5 more)
tests/: conftest.py  test_cache.py  test_clean_text.py  test_diagnostics.py  test_emit_skeleton.py  test_entity_pages.py  test_extract_page_labels.py  test_extract_text.py  test_extract_toc.py  test_fingerprint.py  test_glossary.py  test_import_blobforge.py  test_integration.py  test_migrate_cache.py  test_normalize.py  test_register.py  test_rewrite_refs.py  test_section_tree.py  test_structured_tables.py  test_validate.py
(+6 files in other folders)
