[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf-to-wiki"
version = "0.1.0"
description = "Pipeline for converting pen-and-paper rulebook PDFs into structured Obsidian Markdown wikis"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "PyMuPDF>=1.24.0",
    "pypdf>=4.0.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
]

[project.optional-dependencies]
marker = [
    "marker-pdf>=1.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-tmp-files>=0.0.2",
]

[project.urls]
Repository = "https://github.com/your-org/pdf-to-wiki"

[project.scripts]
pdf-to-wiki = "pdf_to_wiki.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_to_wiki"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]